# JSOM

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  FORMATTING.md  JSOM_UPDATES.md  README.md
benchmarks/: benchmark_construction.cpp  benchmark_dom_access.cpp  benchmark_dom_access_compat.cpp  benchmark_format_preservation.cpp  benchmark_lazy_evaluation.cpp  benchmark_main.cpp  benchmark_memory_usage.cpp  benchmark_parse_serialize.cpp  benchmark_parsing.cpp  benchmark_parsing_compat.cpp  benchmark_serialization.cpp  benchmark_utils.hpp
cmake/: jsomConfig.cmake.in
examples/: CMakeLists.txt  basic_example.cpp  benchmark_example.cpp
include/: jsom.hpp
include/jsom/: allocators.hpp  batch_parser.hpp  constants.hpp  core_types.hpp  fast_parser.hpp  jsom.hpp  json_document.hpp  json_format_options.hpp  json_formatter.hpp  json_parse_options.hpp  json_pointer.hpp  json_value.hpp  navigation_engine.hpp  parse_events.hpp  path_cache.hpp  path_node.hpp  streaming_parser.hpp
src/: allocators.cpp  jsom_cli.cpp  json_document_formatting.cpp  json_document_pointer.cpp  json_value.cpp  main.cpp  path_node.cpp  streaming_parser.cpp
tests/: CMakeLists.txt  fuzzer.cpp  test_allocators.cpp  test_api_compatibility.cpp  test_batch_parser.cpp  test_cache_invalidation.cpp  test_comments.cpp  test_comparison.cpp  test_containers.cpp  test_document_builder.cpp  test_ergonomic_construction.cpp  test_format_preservation.cpp  test_intelligent_serialization.cpp  test_iteration.cpp  test_json_document.cpp  test_json_pointer.cpp  test_json_value.cpp  test_lazy_number.cpp  test_main.cpp  test_memory_safety.cpp  test_parsing.cpp  test_path_node.cpp  test_path_tracking.cpp  test_performance_regression.cpp  test_phase5.cpp  test_phase7.cpp  test_smoke.cpp  test_streaming_parser.cpp  test_string_escaping.cpp  test_strings.cpp  test_unicode_escapes.cpp  test_utf8.cpp
